# volatility-trading

./: .env.example  .gitignore  .jupytext.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TODO.md  backtesting_butterfly.ipynb  forward_volatility.ipynb  gamma_scalping.ipynb  garman_klass.ipynb  greeks.ipynb  iv_rv_mispricing.ipynb  iv_surface_modelling.ipynb  main.ipynb  options_data_extraction.ipynb  prepare_data.ipynb  prob_profit_log_normal.ipynb  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  rv_forecasting.ipynb  setup.cfg  skew_trading.ipynb  spread_arbitrages.ipynb  utility.py  volatility_skew_trading.ipynb  volatility_smile_trading.ipynb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish-pypi.yml  publish-testpypi.yml
config/: orats_api_download.yml  orats_api_extract.yml  orats_daily_features_build.yml  orats_ftp_download.yml  orats_ftp_extract.yml  orats_options_chain_build.yml  orats_qc_daily_features.yml  orats_qc_options_chain.yml  paths.py
config/backtesting/: skew_mispricing.yml  skew_mispricing_delta_hedged.yml  skew_mispricing_named_stress.yml  skew_mispricing_rr_stress.yml  vrp_harvesting.yml  vrp_harvesting_named_stress_delta_hedged.yml  vrp_harvesting_notebook_parity.yml  vrp_harvesting_notebook_parity_2.yml
config/fred/: sync.yml
config/optionsdx/: prepare_panel.yml
config/orats/: ftp_extract.yml  qc_daily_features.yml
config/yfinance/: time_series_sync.yml
docs/: README.md  coding_guide.md  configs.md  data_pipeline.md  development.md  entrypoints.md  jupytext.md  notebook_authoring.md  notebooks.md  package_structure.md  project_structure.md  publishing.md  test_authoring.md  test_structure.md  testing_guide.md  troubleshooting.md
docs/contributing/: daily_features_onboarding.md  development.md  docstrings.md  jupytext.md  notebook_authoring.md  release_process.md  testing_guide.md
docs/reference/: api_scope.md  configs.md  data_pipeline.md  entrypoints.md  options_backtesting_architecture.md  options_backtesting_architecture_internals.md  options_backtesting_architecture_overview.md  options_data_adapters.md  optionsdx_setup.md  orats_troubleshooting.md  package_structure.md
docs/reference/backtesting/: architecture_internals.md  architecture_overview.md  factor_decomposition.md  hedging.md  option_execution.md  workflows.md
docs/research/: notebooks.md  publishing.md  results.md
examples/: README.md  __init__.py  vrp_end_to_end.py  vrp_hedging_cost_baselines.py  vrp_hedging_fixed_band.py  vrp_hedging_ww_band.py
examples/backtesting/: __init__.py  minimal_options_backtest.py  minimal_vrp_backtest.py  vrp_end_to_end.py
examples/backtesting/adapters/: __init__.py  options_market.py
examples/backtesting/execution/: __init__.py  models_and_costs.py
examples/backtesting/exits/: __init__.py  pnl_per_contract.py
examples/backtesting/hedging/: __init__.py  configuration.py  cost_baselines.py  fixed_band.py  ww_band.py
examples/backtesting/margin/: __init__.py  model_and_financing.py  policy_accounts.py
examples/backtesting/strategies/: __init__.py  skew_mispricing.py  skew_mispricing_end_to_end.py  vrp.py  vrp_end_to_end.py
examples/core/: __init__.py  backtesting_helpers.py  cli.py  vrp_helpers.py
notebooks/: greeks.ipynb  iv_rv_mispricing.ipynb  orats_spx_panel_eda_validation.ipynb  orats_spy_qc_eda.ipynb  orats_spy_qc_eda.py  prepare_option_data.ipynb  rv_forecasting.py  skew_trading.ipynb  vrp_harvesting.ipynb  vrp_harvesting.py
notebooks/greeks/: notebook.ipynb  notebook.py
notebooks/iv_surface_modelling/: notebook.py
notebooks/qc_eda/: helpers.py  notebook.ipynb  notebook.py  plotting.py
notebooks/skew_trading/: notebook.ipynb  notebook.py
notebooks/vrp_harvesting/: notebook.ipynb  notebook.py
notes/: snippets.md
reports/: greeks.html  skew_trading.html  vrp_harvesting.html
scripts/: build_daily_features.py  build_options_chain.py  download_orats_api.py  download_orats_ftp.py  download_orats_raw.py  extract_orats_api.py  extract_orats_ftp.py  extract_orats_tickers.py  prepare_optionsdx_panel.py  prepare_orats_panel.py  qc_orats_daily_features.py  qc_orats_options_chain.py
src/config/: paths.py
src/data_processing/: data_processor_rv.py  transformers.py
src/iv_surface/: base_iv_surface_model.py  base_xssvi.py  essvi_model.py  iv_surface_interpolator.py  ssvi_model.py  svi_model.py
src/modelling/: cross_validation.py  data_processing.py  walk_forward.py
src/volatility_trading/apps/: __init__.py  _cli.py
src/volatility_trading/backtesting/: __init__.py  attribution.py  config.py  data_contracts.py  data_loading.py  engine.py  engine_prototype.py  margin.py  margin_types.py  metrics.py  plotting.py  rates.py  types.py
src/volatility_trading/cli/: __init__.py  config.py  logging.py
src/volatility_trading/config/: __init__.py  constants.py  instruments.py  options_chain_sources.py  orats_api_schemas.py  orats_ftp_schemas.py  paths.py  schemas.py
src/volatility_trading/contracts/: __init__.py  options_chain.py
src/volatility_trading/data/: __init__.py  io.py  optionsdx_loader.py  orats_api.py  orats_api_downloader.py  orats_api_endpoints.py  orats_api_io.py  orats_client_api.py  orats_downloader.py  orats_downloader_api.py  orats_extractor.py  orats_extractor_api.py  orats_io.py  orats_panel.py  orats_qc.py  orats_qc_plotting.py
src/volatility_trading/datasets/: __init__.py  daily_features.py  fred.py  options_chain.py  yfinance.py
src/volatility_trading/etl/: __init__.py  optionsdx_loader.py
src/volatility_trading/filters/: __init__.py  base_filter.py  ivp_filter.py  vix_filter.py
src/volatility_trading/iv_surface/: base_iv_surface_model.py  base_xssvi.py  essvi_model.py  iv_surface_interpolator.py  (+3 more)
tests/: README.md
tests/cli/: conftest.py  test_logging.py
utility/: data_processor_helpers.py  greeks.py  plot_helpers.py
(+411 files in other folders)
