[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
# Base quality + import sorting
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (likely bugs / foot-guns)
    "UP",  # pyupgrade (modernize syntax)
    "SIM", # flake8-simplify (readability)
    "C4",  # flake8-comprehensions
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # allow function calls in defaults
    "SIM105", # allow try/except pass (sometimes clearer in tests)
]

[tool.ruff.format]
line-ending = "lf"
indent-style = "space"

[tool.ruff.per-file-ignores]
# Tests commonly use bare `assert` and local rebinds for clarity.
"tests/**/*.py" = ["S101"]
