[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
pythonpath = ["src"]
markers = [
    "integration: integration/smoke tests",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "*.ipynb",
    "notebooks/**/notebook.py",
]

[tool.ruff.lint]
# Base quality + import sorting
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    #"B",   # flake8-bugbear (likely bugs / foot-guns)
    #"UP",  # pyupgrade (modernize syntax)
    #"SIM", # flake8-simplify (readability)
    #"C4",  # flake8-comprehensions
    #"RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # allow function calls in defaults
    "SIM105", # allow try/except pass (sometimes clearer in tests)
]

[tool.ruff.format]
line-ending = "lf"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
# Tests commonly use bare `assert` and local rebinds for clarity.
"tests/**/*.py" = ["S101"]

[tool.pyright]
include = [
  "src/volatility_trading/apps",
  "src/volatility_trading/cli",
  "src/volatility_trading/config",
  "src/volatility_trading/datasets",
  "src/volatility_trading/etl",
  "notebooks/**/*.py",
]
venvPath = "."
venv = ".venv"
exclude = [
  "**/__pycache__",
  "**/*.ipynb",
  "notebooks/**/notebook.py",
]
ignore = [
    "src/volatility_trading/backtesting",
    "src/volatility_trading/rv_forecasting",
    "src/volatility_trading/strategies",
    "src/volatility_trading/iv_surface",
]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
