[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "volatility-trading"
version = "0.2.1"
description = "Volatility trading research"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Anthony Makarewicz" }
]
keywords = ["options", "volatility", "backtesting", "quant", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "altair",
    "exchange-calendars",
    "fredapi",
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    "python-dotenv",
    "py7zr",
    "pyyaml",
    "requests",
    "scikit-learn",
    "scipy",
    "seaborn",
    "statsmodels",
    "yfinance",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupytext",
    "pandas-stubs",
    "pre-commit",
    "pyright",
    "pytest",
    "ruff",
]
release = [
    "build",
    "twine",
]

[project.scripts]
orats-api-download = "volatility_trading.apps.orats.download_api:main"
orats-api-extract = "volatility_trading.apps.orats.extract_api:main"
orats-ftp-download = "volatility_trading.apps.orats.download_ftp:main"
orats-ftp-extract = "volatility_trading.apps.orats.extract_ftp:main"
orats-build-options-chain = "volatility_trading.apps.orats.build_options_chain:main"
orats-build-daily-features = "volatility_trading.apps.orats.build_daily_features:main"
orats-qc-daily-features = "volatility_trading.apps.orats.qc_daily_features:main"
orats-qc-options-chain = "volatility_trading.apps.orats.qc_options_chain:main"
optionsdx-prepare-panel = "volatility_trading.apps.optionsdx.prepare_panel:main"
fred-sync = "volatility_trading.apps.fred.sync:main"
yfinance-sync = "volatility_trading.apps.yfinance.sync:main"

[project.urls]
Homepage = "https://github.com/anthonymakarewicz/volatility-trading"
Documentation = "https://github.com/anthonymakarewicz/volatility-trading/tree/main/docs"
Reports = "https://anthonymakarewicz.github.io/volatility-trading/"
Repository = "https://github.com/anthonymakarewicz/volatility-trading"
Issues = "https://github.com/anthonymakarewicz/volatility-trading/issues"
Changelog = "https://github.com/anthonymakarewicz/volatility-trading/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
pythonpath = ["src"]
markers = [
    "integration: integration/smoke tests",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "*.ipynb",
    "notebooks/**/notebook.py",
]

[tool.ruff.lint]
# Base quality + import sorting
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    #"B",   # flake8-bugbear (likely bugs / foot-guns)
    #"UP",  # pyupgrade (modernize syntax)
    #"SIM", # flake8-simplify (readability)
    #"C4",  # flake8-comprehensions
    #"RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # allow function calls in defaults
    "SIM105", # allow try/except pass (sometimes clearer in tests)
]

[tool.ruff.format]
line-ending = "lf"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
# Tests commonly use bare `assert` and local rebinds for clarity.
"tests/**/*.py" = ["S101"]

[tool.pyright]
include = [
  "src/volatility_trading/apps",
  "src/volatility_trading/cli",
  "src/volatility_trading/config",
  "src/volatility_trading/datasets",
  "src/volatility_trading/etl",
  "notebooks/**/*.py",
]
venvPath = "."
venv = ".venv"
exclude = [
  "**/__pycache__",
  "**/*.ipynb",
  "notebooks/**/notebook.py",
]
ignore = [
    "src/volatility_trading/backtesting",
    "src/volatility_trading/rv_forecasting",
    "src/volatility_trading/strategies",
    "src/volatility_trading/iv_surface",
]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
