[metadata]
name = volatility-trading
version = 0.1.0
description = Volatility trading research

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    orats-api-download = volatility_trading.apps.orats.download_api:main
    orats-api-extract = volatility_trading.apps.orats.extract_api:main
    orats-ftp-download = volatility_trading.apps.orats.download_ftp:main
    orats-ftp-extract = volatility_trading.apps.orats.extract_ftp:main
    orats-build-options-chain = volatility_trading.apps.orats.build_options_chain:main
    orats-build-daily-features = volatility_trading.apps.orats.build_daily_features:main
    orats-qc-daily-features = volatility_trading.apps.orats.qc_daily_features:main
    orats-qc-options-chain = volatility_trading.apps.orats.qc_options_chain:main
